<resources>
    <string name="app_name">HelpApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">   Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign In </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="profile">Profile</string>
    <string name="Map">Map</string>
    <string name="title_notifications">Notifications</string>
    <string name="help_me">Help Me</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">don\'t have an account</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="todo">TODO</string>
    <string name="title_EmergencyCall">Emergency</string>
    <string name="textview">Please Click button below to get ambolance help</string>
</resources>
