<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="260dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="260dp"

            android:contentDescription="@string/todo" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center|bottom"
                android:background="#80000000">
                <TextView
                android:id="@+id/sin"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Sign in"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="16dp"/>
            <TextView
                android:id="@+id/sup"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Sign up"
                android:textColor="#fff"
                android:textSize="16sp"
                android:padding="16dp"/>
        </LinearLayout>
    </FrameLayout>
    <EditText
        android:id="@+id/mal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/e_mail"
        android:inputType="text"
        android:textColor="#000"
        android:background="#f0f0f4"
        android:padding="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/email" />
    <EditText
        android:id="@+id/pswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="#f0f0f4"
        android:textColor="#000"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="12dp"
        android:drawablePadding="16dp"
        android:drawableLeft="@drawable/lockers"
        android:drawableStart="@drawable/lockers" />
    <customfonts.MyRegulerText
        android:id="@+id/sinnp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btnformate"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:textAlignment="center"
        android:padding="14dp"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textSize="16sp"
        android:textColor="#fff"
        />
    <customfonts.MyTextView
        android:id="@+id/act"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        android:textSize="16sp"
        android:layout_gravity="center" />
</LinearLayout>